--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.android.support:design:23.1.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'ru.yandex:yandexmapkit:2.4.2@aar'
+    //compile 'com.bowyer.app:fab-toolbar:1.1.0@aar'
+    //compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
 }
