--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://github.com/yandexmobile/yandexmapkit-android/raw/maven/' }
     }
 }
 
