--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddFuelActivity" />
+        <activity android:name=".addFuelActivity" />
         <activity
             android:name=".FuelStatisticsActivity"
             android:label="@string/title_activity_fuel_statistics"
